--- a/package.json
+++ b/package.json
@@ -36,14 +36,12 @@
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-flow": "^6.23.0",
+    "cross-env": "^5.1.3",
     "flow-copy-source": "^1.2.1",
     "husky": "^0.14.3",
     "lint-staged": "^6.1.0",
     "prettier": "^1.10.2",
     "redux-persist-node-storage": "^2.0.0",
     "rimraf": "^2.6.2"
-  },
-  "dependencies": {
-    "cross-env": "^5.1.3"
   }
 }
